[project]
name = "greek-parcel-cli"
version = "0.1.0"
description = "A CLI tool for tracking parcels from Greek courier services."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4",
    "lxml",
    "requests",
    "rich",
    "typer",
]

[tool.uv]
dev-dependencies = []
